Changed user based errors to info, warn logging level instead of error